# Cnake

./: CMakeLists.txt  README
src/: main.c
src/game/: AI.c  gameflow.c  gamelogic.c  initSDL.c
src/headers/clog/: clog.h
src/headers/constants/: constants.h
src/headers/gameheaders/: AI.h  Cnake.h  Cnakebody.h  fruit.h  gameflow.h  gamelogic.h  gamestate.h  initSDL.h  menu.h  moves.h
src/headers/helperfuncs/: gridlogic.h  rendergame.h  structlogic.h
src/headers/menuheaders/: menulogic.h  menurenderer.h
src/helperfuncs/: gridlogic.c  rendergame.c  structlogic.c
src/log/: clog.c
src/menu/: menulogic.c  menurenderer.c
